tests/baselines/reference/superWithTypeArgument.errors.txt
==== tests/cases/compiler/superWithTypeArgument.ts (2 errors) ====
    class C {
        
    }
    
    class D<T> extends C {
        constructor() {
            super<T>();
                 ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
            ~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
        }
    }